force-app/main/default/objects/TrackIT__Assigned_License__c/TrackIT__Assigned_License__c.object-meta.xml
<CustomObject>
    <label>Assigned License</label>
    <nameField>
        <displayFormat>LIC-{0000000000}</displayFormat>
        <label>Assigned License ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>