force-app/main/default/objects/TrackIT__Assigned_License__c/fields/TrackIT__Assignee__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>TrackIT__Assignee__c</referenceTo>
    <relationshipLabel>Assigned Licenses</relationshipLabel>
    <relationshipName>Assigned_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>