force-app/main/default/objects/TrackIT__Assigned_License__c/fields/TrackIT__Item__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TrackIT__Item__c.TrackIT__Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Computer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipLabel>Assigned Licenses</relationshipLabel>
    <relationshipName>Assigned_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>