force-app/main/default/objects/TrackIT__Assigned_License__c/fields/TrackIT__License__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__License__c</fullName>
    <label>License</label>
    <referenceTo>TrackIT__License__c</referenceTo>
    <relationshipLabel>Assigned Licenses</relationshipLabel>
    <relationshipName>Assigned_Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>