force-app/main/default/objects/TrackIT__Assigned_License__c/fields/TrackIT__Quantity__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>