force-app/main/default/objects/TrackIT__Assigned_License__c/validationRules/TrackIT__Item_Assignee_Both_Cannot_Have_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Item_Assignee_Both_Cannot_Have_Data</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( TrackIT__Item__c )), NOT( ISBLANK(  TrackIT__Assignee__c )))</errorConditionFormula>
    <errorMessage>Both item and assignee fields cannot have data at the same time. Select either an assignee or item.</errorMessage>
</ValidationRule>