force-app/main/default/objects/TrackIT__Assigned_License__c/validationRules/TrackIT__Qty_field_one_or_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Qty_field_one_or_greater</fullName>
    <active>true</active>
    <errorConditionFormula>TrackIT__Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>TrackIT__Quantity__c</errorDisplayField>
    <errorMessage>Quantity field must be 1 or greater.</errorMessage>
</ValidationRule>